tests/NormalTests/paczka1/fuzzy1/60677728.err
Error in line 1: lIVeVZGp S863 39,4
Error in line 8: TxgGNb1OoO A675 176,00
Error in line 6: 5bGB2PSVKg A675 1,3
Error in line 9: 5bGB2PSVKg A65 0,4
Error in line 7: vqvureeLc S146 89,8
Error in line 14: 5bGB2PSVKg S146 18,4
Error in line 15: S863 S146 7,9
Error in line 20: S863 A675 183,3
Error in line 19: NGGPvPT S146 6,7
Error in line 18: 5bGB2PSVKg S863 11,5
Error in line 33: UY5 A675 17,3
Error in line 39: 5bGB2PSVKg A609 62,50
Error in line 34: vqvureeLc A609 261,0
